--- a/src/components/video/video.component.html
+++ b/src/components/video/video.component.html
@@ -2,6 +2,6 @@
 <input type="file" id="file" (change)="handleFileInput($event)">
 <button (click)="doDecode()">Start</button>
 <hr />
-<!-- <div *ngFor="let image of bolbList">
-  <img [src]="image" alt="">
-</div> -->
+<div *ngFor="let image of bolbList">
+  <img [src]="image | safeResourceUrl" alt="">
+</div>
